# HrAutoFlow

./: .gitignore  BUGFIX_UI_IMPROVEMENTS.md  README.md  docker-compose.yml
client/: README.md  package-lock.json  package.json
client/.next/dev/: prerender-manifest.json  trace
client/.next/dev/cache/: .rscinfo
client/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
client/.next/dev/server/chunks/: [root-of-the-server]__f7ccde15._.js  [root-of-the-server]__f7ccde15._.js.map  node_modules_next_562c89a4._.js  node_modules_next_562c89a4._.js.map
client/.next/dev/static/chunks/: [root-of-the-server]__0f0ba101._.css  [root-of-the-server]__0f0ba101._.css.map  _08fc4929._.js  _08fc4929._.js.map  node_modules_@swc_helpers_cjs_d80fb378._.js.map  node_modules_next_dist_094231d7._.js.map  node_modules_next_dist_2c670af9._.js.map  node_modules_next_dist_4b2403f5._.js.map  node_modules_next_dist_client_a6ce9b62._.js.map  node_modules_next_dist_compiled_a0e4c7b4._.js.map  node_modules_next_dist_compiled_next-devtools_index_1dd7fb59.js  node_modules_next_dist_compiled_react-dom_1e674e59._.js.map  node_modules_next_dist_compiled_react-server-dom-turbopack_9212ccad._.js.map  (+2 more)
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/applicants/: layout.tsx  page.tsx
client/src/app/candidates/: layout.tsx  page.tsx
client/src/app/chat/: page.tsx
client/src/app/dashboard/: layout.tsx  page.tsx
client/src/app/evaluations/: layout.tsx  page.tsx
client/src/app/feedback/: page.tsx
client/src/app/jobs/: layout.tsx  page.tsx
client/src/components/candidates/: CandidateCard.tsx  CandidateOverview.tsx  CandidateTable.tsx  HumanEvaluation.tsx  ResumeQA.tsx
client/src/components/dashboard/: DashboardStatCard.tsx  InterviewLog.tsx  PositionPieChart.tsx  QuickSettings.tsx  RecommendedCandidates.tsx
client/src/components/evaluations/: EvaluationDetailModal.tsx
client/src/components/jobs/: JobForm.tsx
client/src/components/layout/: topbar.tsx
client/src/lib/: api-client.ts
client/src/types/: candidate.ts  dashboard.ts  position.ts
server/: .dockerignore  .env  Dockerfile  README.md  cleanup_test_applicants.py  db.sql  dummy_data.sql  hr-ai-resume-app-legacy-environment.json  pyproject.toml  recalculate_scores.py  select_ex_query.sql
server/app/: config.py  db.py  init_db.py  main.py  models.py  seed_demo.py
server/app/routers/: __init__.py  candidates.py  candidates_router.py  llm_router.py  position_router.py  upload_router.py
server/app/schemas/: candidate_schema.py  position_schemas.py
server/app/services/: candidate_service.py  llm_service.py  upload_service.py
server/llm_models/: upstage_llm.py
server/test/chanwoo/: README.md  demo_questions.json  notes.md  rag_smoke_test.py
server/test/gyuno/: test.ipynb
server/test/gyuno/doc/: Complete_Football_Ontology_2025.ttl
server/test/yujoon/: ollama_test.ipynb
server/test/yujun/: LLMService.ipynb  ollama_test.ipynb  train.jsonl  train_backend.jsonl  train_frontend.jsonl  train_lora_llama3_1_score.py  traing_lora.ipynb  training_json_maker.ipynb
server/test/yujun/.ipynb_checkpoints/: ollama_test-checkpoint.ipynb
server/test/yujun/lora/adapters/team_backend/: README.md  adapter_config.json
server/test/yujun/lora/adapters/team_backend/checkpoint-15/: trainer_state.json
server/test/yujun/lora/adapters/team_frontend/: README.md
server/test/yujun/lora/adapters/team_frontend/checkpoint-15/: README.md  adapter_config.json  rng_state.pth  trainer_state.json
server/test/yujun/resumes_augmentation/: 김민수.txt  박지현.txt  이준호.txt  최도윤.txt
(+32 files in other folders)
