[tool.poetry]
name = "hr-autoflow"  # 아무 이름이나, 프로젝트 이름
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "ctccts22",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "openai (>=2.7.1,<3.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pgvector (>=0.3.0,<0.4.0)",
    "langchain-core (>=1.0.4,<2.0.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-postgres (>=0.0.16,<0.0.17)",
    "pillow (>=12.0.0,<13.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pypdf (>=6.3.0,<7.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "chromadb (>=1.3.4,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "peft (>=0.18.0,<0.19.0)",
    "trl (>=0.25.1,<0.26.0)",
    "bitsandbytes (>=0.48.2,<0.49.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "transformers (>=4.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
